Got a bit more working, still very unstable. Saving right now in case I break it down the line for the sake of reverting