@@ -1,10 +1,7 @@
 package codegen.instruction.riscv;
 
 import ast.expr.BinaryExpression;
-import ast.types.FloatingType;
-import ast.types.IntegerType;
-import ast.types.PointerType;
-import ast.types.PrimitiveType;
+import ast.types.*;
 import codegen.instruction.Instruction;
 import codegen.values.Literal;
 import codegen.values.Register;
@@ -18,7 +15,15 @@ public class LoadRisc extends RiscInstruction {
     private Literal offset;
     private final PrimitiveType loadType;
 
-    public LoadRisc(Register result, Register location, Literal offset) {
+
+    public LoadRisc(Register result, Register location) {
+        super(Arrays.asList(result), Arrays.asList(location));
+        assert result.type() instanceof PrimitiveType;
+        this.loadType = (PrimitiveType) result.type();
+        this.offset = null;
+    }
+
+    private LoadRisc(Register result, Register location, Literal offset) {
         super(Arrays.asList(result), Arrays.asList(location));
         assert result.type() instanceof PrimitiveType;
         this.loadType = (PrimitiveType) result.type();
@@ -29,19 +34,51 @@ public class LoadRisc extends RiscInstruction {
         super(Arrays.asList(result), Arrays.asList(location));
         assert result.type() instanceof PrimitiveType;
         this.loadType = (PrimitiveType) result.type();
-        this.offset = new Literal(Long.toString(offset), new IntegerType(IntegerType.Width.LONG, true));
+        Literal offsetLit = new Literal(Long.toString(offset), new IntegerType(IntegerType.Width.LONG, true));
+        this.offset = offsetLit;
     }
 
-    public LoadRisc(Register result, Register location) {
-        super(Arrays.asList(result), Arrays.asList(location));
-        assert result.type() instanceof PrimitiveType;
-        this.loadType = (PrimitiveType) result.type();
-        this.offset = null;
-    }
+//    public static List<Instruction> withOffset(Register value, Register location, long offset) {
+//        Literal offsetLit = new Literal(Long.toString(offset), new IntegerType(IntegerType.Width.LONG, true));
+//        if (offset > 2047 || offset < -2048) {
+//            return List.of(
+//                    new LoadImmRisc(Register.RiscIntTemp(0), offsetLit),
+//                    new BinaryRisc(Register.RiscIntTemp(1), BinaryExpression.Operator.PLUS,
+//                            Register.RiscIntTemp(0), Register.RiscSp()),
+//                    new LoadRisc(value, Register.RiscIntTemp(1))
+//            );
+//        } else {
+//            return List.of(
+//                    new LoadRisc(value, location, offsetLit)
+//            );
+//        }
+//    }
+
+
 
     public void setOffset(long offset) {
         this.offset = new Literal(Long.toString(offset), new IntegerType(IntegerType.Width.LONG, true));
     }
+
+//    public static List<Instruction> collapseDefaultStack(long offset) {
+//        List<Instruction> result = new ArrayList<>();
+//        long base = 0;
+//        offset-=16;
+//        result.addAll(LoadRisc.withOffset(Register.RiscFp(), Register.RiscSp(), offset));
+//        offset+=8;
+//        result.addAll(LoadRisc.withOffset(Register.RiscRa(), Register.RiscSp(), offset));
+//        offset+=8;
+//
+//        if (offset > 2047 || offset < -2048) {
+//            result.add(new LoadImmRisc(Register.RiscIntTemp(0), new Literal(Long.toString(offset),
+//                    new IntegerType(IntegerType.Width.LONG, true))));
+//            result.add(new BinaryRisc(Register.RiscSp(), BinaryExpression.Operator.PLUS,
+//                    Register.RiscSp(), Register.RiscIntTemp(0)));
+//        } else {
+//            result.add(new BinaryImmRisc(Register.RiscSp(), BinaryExpression.Operator.PLUS, Register.RiscSp(), offset));
+//        }
+//        return result;
+//    }
 
     public static List<Instruction> collapseDefaultStack(long offset) {
         List<Instruction> result = new ArrayList<>();
